Updates Developer and User Guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -279,18 +279,30 @@ deletes the contacts with the 2nd, 4th, 7th and 8th indexes in the address book.
 
 Add photos to contact details in addressBook. +
 
-=== Delete Tag : (Coming in v1.5)
+=== Delete tag : (Coming in v1.5)
 
 Delete specific tag from all contacts. +
 
-=== Clear Tag : (Coming in v1.5)
+=== Clear tag : (Coming in v1.5)
 
 Clear all tags from specific contact. +
 
-=== Recently Deleted : `recentlyDel` (Since v1.2)
+=== Recently deleted : `recentlyDel` (Since v1.2)
 
 Shows recently deleted list of contacts for past 30 contacts. +
 Format: `recentlyDel`
+
+=== Changing theme : `theme` (Since v1.5)
+
+Changes the colour theme of TheYellowPage from `DarkTheme.css` to `LightTheme.css` and vice versa. +
+
+image::DarkTheme.png[width="790"]
+_Figure 4.19.1 : Screenshot of TheYellowPage in DarkTheme.css_ +
+
+image::LightTheme.png[width="790"]
+_Figure 4.19.2 : Screenshot of TheYellowPage in LightTheme.css_ +
+
+Format: `theme`
 
 === Moving contacts : `move` (Coming in v2.0)
 
