--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -130,14 +130,14 @@ Returns any person with phone number `83537423`
 Returns any person with address `earth`
 
 
-=== Deleting a person : `delete`
+=== Deleting person(s) : `delete`
 
-Deletes the specified person from the address book. +
-Format: `delete INDEX` +
+Deletes the specified person(s) from the address book. +
+Format: `delete INDEX [INDEX...]` +
 Alias: `d`
 
 ****
-* Deletes the person at the specified `INDEX`.
+* Deletes the person(s) at the specified `INDEX(s)`.
 * The index refers to the index number shown in the most recent listing.
 * The index *must be a positive integer* 1, 2, 3, ...
 ****
@@ -430,8 +430,8 @@ There is no need to save manually.
 * *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 t/friend t/colleague`
 * *Clear* : `clear`
-* *Delete* : `delete INDEX` +
-e.g. `delete 3`
+* *Delete* : `delete INDEX [INDEX...]` +
+e.g. `delete 3 4`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
 e.g. `edit 2 n/James Lee e/jameslee@example.com`
 * *Find* : `find KEYWORD [MORE_KEYWORDS]` +
@@ -446,7 +446,7 @@ e.g. `gcreate n/Bamboo`
 e.g. `gadd g/1 p/2`
 * *Delete Group* : `gdelete INDEX` +
 e.g. `gdelete 2`
-* *List* : `list`
+* *List* : `list [f/]`
 * *Help* : `help`
 * *Select* : `select INDEX` +
 e.g.`select 2`
