--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -265,10 +265,10 @@ Example:
 * `removeTag friend` +
 Removes the tag `friend` from all the persons in the address book.
 
-=== Setting a tag colour: `colourtag`
+=== Setting a tag colour: `colourTag`
 
 Sets a colour of a tag to a new colour. +
-Format: `colourtag TAG COLOUR`
+Format: `colourTag TAG COLOUR`
 
 ****
 * Sets the colour of tag `TAG` to `COLOUR`.
@@ -279,7 +279,7 @@ Format: `colourtag TAG COLOUR`
 
 Example:
 
-* `colourtag friend red` +
+* `colourTag friend red` +
 Sets the colour of the tag `friend` to red on next program start.
 
 === Selecting a person : `select`
@@ -368,10 +368,10 @@ The `redo` command fails as there are no `undo` commands executed previously.
 Clears all entries from the address book. +
 Format: `clear`
 
-=== Clearing command history : `clearhistory`
+=== Clearing command history : `clearHistory`
 
 Clears the command history. +
-Format: `clearhistory`
+Format: `clearHistory`
 
 [WARNING]
 ====
@@ -516,10 +516,10 @@ e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 123466
 * *Add Relationship*: `addRelationship FROM_INDEX TO_INDEX DIRECTION` +
 e.g. `addRelationship 1 3 directed`
 * *Back up* : `backup`
-* *Colour tags* : `colourtag TAG COLOUR` +
-e.g. `colourtag friend red`
+* *Colour tags* : `colourTag TAG COLOUR` +
+e.g. `colourTag friend red`
 * *Clear* : `clear`
-* *Clear history* : `clearhistory`
+* *Clear history* : `clearHistory`
 * *Delete* : `delete INDEX` +
 e.g. `delete 3`
 * *Edit* : `edit INDEX [n/NAME] [p/PHONE_NUMBER] [e/EMAIL] [a/ADDRESS] [t/TAG]...` +
