--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -135,6 +135,7 @@ _Figure 3.2.2: add command result_
 Shows a list of all persons in the address book. +
 Format & Example: `list`
 
+// tag::listE[]
 ==== Listing all events : `listE`
 
 Shows a list of all events in the event list. +
@@ -144,7 +145,9 @@ You will see the following after typing 2 above example list command:
 
 image::UG_list.png[width="790"]
 _Figure 3.3: list command result_
+// end::listE[]
 
+// tag:sort[]
 === Sorting all persons and events: `sort`
 
 You can use it to view a list of sorted persons in the address book according to the alphabetical order of their names,
@@ -155,6 +158,8 @@ You will see the following after typing sort command:
 
 image::UG_sort.png[width="790"]
 _Figure 3.4: sort command result_
+
+// end:sort[]
 
 === Editing
 ==== Editing a person : `edit`
@@ -236,6 +241,7 @@ Subsequently, you will see the following after typing `find Betsy john`:
 image::UG_find_2.png[width="790"]
 _Figure 3.6.2: find command result 2_
 
+// tag::findE[]
 ==== Locating events by name: `findE`
 
 Finds events whose names contain any of the given keywords. +
@@ -255,6 +261,8 @@ Examples:
 Returns `Meeting` and `meeting`
 * `find Sports Meeting` +
 Returns any event having names `Sports`or `Meeting`
+
+// end::findE[]
 
 === Deleting
 ==== Deleting a person : `delete`
@@ -344,9 +352,10 @@ You will see the following after typing above commands: +
 image::UG_disjoin.png[width='790']
 _Figure 3.9: disjoin result_
 
+// tag::showP[]
 === Showing all participants of an event : `showP`
 
-You can use it to view all persons who join a certain event. +
+You can use it to view all participants who join a certain event. +
 Format: `showP EVENT_INDEX`
 
 ****
@@ -360,12 +369,14 @@ Assuming that you have typed `join p/2 e/1` before this example.
 
 * `listE` +
 `showP 1` +
-Shows all persons who are involved in the 1st event of event list.
+Shows all participants who are involved in the 1st event of event list.
 
 You will see the following after typing above commands: +
 
 image::UG_showPerson.png[width='790']
 _Figure 3.10: show persons result_
+
+// end::showP[]
 
 === Selecting all events which a person joins : `selectE`
 
