--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -471,6 +471,7 @@ image::FindCommandSequenceDiagram.png[width="800"]
 **Cons:** Difficult to implement because it is tedious to distinguish the user input as several parameters are `String` parameters.
 // end::findcommand[]
 
+//tag:deletecommand[]
 === Enhancing DeleteCommand mechanism
 
 Prior to enhancement, the `DeleteCommand` class can only delete one entry at a time from the current visible
@@ -481,7 +482,39 @@ This enhancement was done by changing the `Index` input for the original `Delete
 allowing it to store more than one `Index` from the user's input. Once it is able to accept more than one `Index`
 for its parameters, the original `DeleteCommand` was modified such that it would run through all the validity checks
 for the given indices. The `DeleteCommand` class would then delete these indicated entries upon success of the
-validity check.
+validity check. The following code is a brief example of what has been modified from the original code:
+[source, java]
+----
+@Override
+    public CommandResult executeUndoableCommand() throws CommandException {
+        List<ReadOnlyPerson> lastShownList = model.getFilteredPersonList();
+        for (int x = 0; x < targetIndex.size(); x++) {
+            if (targetIndex.get(x).getZeroBased() >= lastShownList.size()) {
+                throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
+            }
+        }
+
+        ArrayList<ReadOnlyPerson> personToDelete = new ArrayList<>();
+        for (int x = 0; x < targetIndex.size(); x++) {
+            personToDelete.add(lastShownList.get(targetIndex.get(x).getZeroBased()));
+        }
+        try {
+            for (int x = 0; x < personToDelete.size(); x++) {
+                model.deletePerson(personToDelete.get(x));
+            }
+        } catch (PersonNotFoundException pnfe) {
+            assert false : "The target person cannot be missing";
+        }
+        String outputResult = MESSAGE_DELETE_PERSON_SUCCESS;
+        outputResult = String.format(outputResult, personToDelete.get(0));
+        for (int x = 1; x < personToDelete.size(); x++) {
+            outputResult = outputResult + "\n";
+            String temp = personToDelete.get(x).toString();
+            outputResult += temp;
+        }
+        return new CommandResult(outputResult);
+    }
+----
 
 The `DeleteCommandParser` also has to be updated to allow for multiple indices to be accepted. This is done in a similar
 fashion to the above, where the entries for `Index` are changed to that of `ArrayList`, causing the user's entries
@@ -494,6 +527,7 @@ to be stored in an `ArrayList <Index>`.
 **Pros:** It allows for most of the base code of `DeleteCommand` to be reused. +
 **Cons:** Have to be thorough and change `Index` to `ArrayList<Index>` in all occurrences within all relevant
   `DeleteCommand` classes and methods. +
+//end::deletecommand[]
 
 // tag::birthday[]
 === BirthdayCommand mechanism
@@ -548,6 +582,7 @@ then the people without birthdays in lexicographical order of their names.
 **Cons:** Difficult to implement and maintain. Testing can be more tedious as well.
 // end::upbirthday[]
 
+//tag::sortcommand[]
 === SortCommand mechanism
 
 `SortCommand` inherits from `UndoableCommand` and supports undoing and redoing.
@@ -556,8 +591,43 @@ The command sorts the persons within the list by the given prefix, which default
 
 
 The `SortCommand` class takes in the given prefix and determines the Comparator for the sort to occur.
-It would then pass the Comparator to the Model component and executes the sort based on the Comparator using the inbuilt function
-of `Collections.sort()`. It will then call the `updatedFilteredPersonList()` method in the `Model` class and display
+It will then pass the Comparator to the Model component and executes the sort based on the Comparator using the inbuilt function
+of `Collections.sort()`. The Comparator is obtained through the following code:
+[source, java]
+----
+private Comparator<ReadOnlyPerson> getSortComparator(String parameter) {
+        switch (parameter) {
+        case PREFIX_NAME:
+            this.sortParam = "name";
+            return (o1, o2) -> o1.getName().toString().compareToIgnoreCase(o2.getName().toString());
+
+        case PREFIX_EMAIL:
+            this.sortParam = "email";
+            return (o1, o2) -> o1.getEmail().toString().compareToIgnoreCase(o2.getEmail().toString());
+
+        case PREFIX_PHONE:
+            this.sortParam = "phone";
+            return (o1, o2) -> o1.getPhone().toString().compareToIgnoreCase(o2.getPhone().toString());
+
+        case PREFIX_ADDRESS:
+            this.sortParam = "address";
+            return (o1, o2) -> o1.getAddress().toString().compareToIgnoreCase(o2.getAddress().toString());
+
+        case PREFIX_TAG:
+            this.sortParam = "tag";
+            return (o1, o2) -> o1.getTags().toString().compareToIgnoreCase(o2.getTags().toString());
+
+        case PREFIX_AGE:
+            this.sortParam = "age";
+            return (o1, o2) -> o1.getAge().toString().compareToIgnoreCase(o2.getAge().toString());
+
+        default:
+            return (o1, o2) -> o1.getName().toString().compareToIgnoreCase(o2.getName().toString());
+        }
+    }
+----
+
+It will then call the `updatedFilteredPersonList()` method in the `Model` class and display
 a Success message upon successful completion of the command.
 
 
@@ -579,7 +649,7 @@ display of the entire list in an easier to see manner. +
 **Cons:** Unable to make it inbuilt due to the presence of multiple sort parameters. Contacts are not sorted upon addition to Peersonal.  +
 
 ---
-
+//end::sortcommand[]
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
