Update UG for quickhelp + Update Collate + Code SLAP based on Collate Feedback (#137)
* Added command alias

Alias are shortcut commands that can be used in replacement of the full
command word.

* Revert "Added command alias"

This reverts commit d68c0fa41270f16d1c9e3dc3554abc091af02653.

* Added Command Alias

Alias are shortcuts that the user can enter in replacement of the full
command word.

* Revert "Added Command Alias"

This reverts commit 38083b64d1fc7a8f0dc1bcb9aa47f64d875799fd.

* Added Command Alias

Alias can be used as shortcuts to commands.

* Updated User Stories

* Change indentations

* Added Test for Command Alias

* Resolve conflict of Dev guide while merging

* Revert "Added Test for Command Alias"

This reverts commit 29e8e7d948259b52025edbd6e99d7edbb7f73134.

* Added quickhelp command

* Added comment

* Update UG for quickhelp

* Updated collate

* Updated codes based on collate feedback

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -85,9 +85,9 @@ Alias: `h`
 
 This command takes no arguments.
 
-==== Viewing quick help : `quickhelp` (Not implemented yet. Coming in v2.0)
+==== Viewing quick help : `quickhelp` (Since v1.5)
 
-Opens a quick summary of using the address book. +
+List all the available command words of the address book. +
 Format: `quickhelp` +
 Alias: `qh`
 
