--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -337,7 +337,7 @@ image::MapCommandClassDiagram.png[width="800"]
 
 When you are using the map-show `(m-show)` command, you need to specify the index number of the person whom you would like to see the location of. As for the map-route `(m-route)` command, apart from specifying the index number, you also need to add a prefix `a/` before you enter your current location. The prefix should appear only once.
 
-During the implementation, map command parser class extracts the index number of the contact and passes the value to the corresponding map command. For `m-route` command, the parser class also extracts your current location by using the prefix symble. The map command classes will post and raise an event once they are called, based on the parameters they have received.
+During the implementation, map command parser class extracts the index number of the contact and passes the value to the corresponding map command. For `m-route` command, the parser class also extracts your current location by using the prefix symbol. The map command classes will post and raise an event once they are called, based on the parameters they have received.
 
 If you enter `m-show` command, a `BrowserPanelShowLocationEvent` will start. It will build a Google map URL with the specified location of the person selected, and load the Google map in the browser panel.
 
@@ -436,8 +436,6 @@ The following sequence diagrams show you how the Map commands work:
 
 image::MapShowCommandSequenceDiagram.png[width="800"]
 
-
-
 image::MapRouteCommandSequenceDiagram.png[width="800"]
 
 [NOTE]
@@ -454,16 +452,110 @@ If no prefix is found inside the argument when typing `m-route` command, then an
 ==== Design Considerations
 
 **Aspect:** Locate a person in Google map +
-**Alternative 1 (current choice):** Add the string value of address to Google map url +
+**Alternative 1 (current choice):** Add the string value of address to Google map URL +
 **Pros:** The process of finding the location using Google map is simple and straightforward. +
 **Cons:** Google map is not able to find the location or route if the location is not in Singapore. +
 **Alternative 2:** Use some other online maps (e.g. Baidu Map) +
 **Pros:** You are able to find the location in the map even it is not in Singapore. +
-**Cons:** The url will not be changing during the process, thus it is not easy to achieve the map functions.
+**Cons:** The URL will not be changing during the process, thus it is not easy to achieve the map functions.
 // end::mapmech[]
 
 // tag::birthdaymech[]
 === Birthday mechanism
+
+The birthday feature allows you to add/update/remove birthday to a selected person. The birthday value is not required when you add a person, since you might not know the birthday of every person. You are not allowed to use `edit` command to update person's birthday.
+
+When you are executing the birthday related commands, only one person is allowed to be selected. The `BIRTHDAY` parameter needs to follow DD/MM/YYYY format. Only the valid date values are allowed to be stored into person's birthday.
+
+The following diagram shows the inheritance diagram for Birthday commands:
+
+image::BirthdayCommandClassDiagram.png[width="800"]
+
+During the implementation, birthday commands parser classes extracts the index number of the person as well as birthday value, and passes them to the corresponding birthday classes. The default birthday value of each person is `01/01/1900`. To add birthday to a person, we actually updated the person's birthday with the new birthday value. To delete a person's birthday, we just update the person's birthday and set it as default value. Updating a person's birthday is similar to adding birthday to the person. The two functions are the same in implementation.
+
+Each time a person is selected from the person list panel, we check the value of the selected person's birthday. If it is default value, it will not be shown in the person details panel.
+
+The adding birthday function is implemented this way:
+[source,java]
+----
+List<ReadOnlyPerson> lastShownList = model.getFilteredPersonList();
+    if (targetIndex.getZeroBased() >= lastShownList.size()) {
+        throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
+    }
+
+    ReadOnlyPerson currentPerson = lastShownList.get(targetIndex.getZeroBased());
+    Person personToEdit = (Person) lastShownList.get(targetIndex.getZeroBased());
+    personToEdit.setBirthday(birthdayToAdd);
+
+    try {
+        model.updatePerson(currentPerson, personToEdit);
+    } catch (DuplicatePersonException dpe) {
+        throw new CommandException(MESSAGE_DUPLICATE_PERSON);
+    } catch (PersonNotFoundException pnfe) {
+        throw new AssertionError("The target person cannot be missing");
+    }
+
+    model.updateFilteredPersonList(PREDICATE_SHOW_ALL_PERSONS);
+
+    EventsCenter.getInstance().post(new JumpToListRequestEvent(targetIndex));
+
+    return new CommandResult(String.format(MESSAGE_ADD_BIRTHDAY_SUCCESS, personToEdit));
+----
+
+The removing birthday function is implemented this way:
+[source,java]
+----
+List<ReadOnlyPerson> lastShownList = model.getFilteredPersonList();
+    if (targetIndex.getZeroBased() >= lastShownList.size()) {
+        throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
+    }
+
+    ReadOnlyPerson currentPerson = lastShownList.get(targetIndex.getZeroBased());
+    Person personToEdit = (Person) lastShownList.get(targetIndex.getZeroBased());
+    Birthday birthdayToAdd = new Birthday();
+    personToEdit.setBirthday(birthdayToAdd);
+
+    try {
+        model.updatePerson(currentPerson, personToEdit);
+    } catch (DuplicatePersonException dpe) {
+        throw new CommandException(MESSAGE_DUPLICATE_PERSON);
+    } catch (PersonNotFoundException pnfe) {
+        throw new AssertionError("The target person cannot be missing");
+    }
+
+    model.updateFilteredPersonList(PREDICATE_SHOW_ALL_PERSONS);
+
+    EventsCenter.getInstance().post(new JumpToListRequestEvent(targetIndex));
+
+    return new CommandResult(String.format(MESSAGE_REMOVE_BIRTHDAY_SUCCESS, personToEdit));
+----
+
+The following sequence diagrams show you how the birthday commands work:
+
+image::BirthdayAddCommandSequenceDiagram.png[width="800"]
+
+image::BirthdayRemoveCommandSequenceDiagram.png[width="800"]
+
+[NOTE]
+If no argument is provided after the command word, an invalid format message will be shown.
+
+
+[NOTE]
+If the index number provided is out of the bound of person list, an invalid person index message will be shown.
+
+
+[NOTE]
+If an invalid birthday is provided for birthday-remove command, an invalid input birthday message will be shown.
+
+==== Design Considerations
+
+**Aspect:** Birthday value of a contact +
+**Alternative 1 (current choice):** Every person without specifying a birthday has a default birthday value `01/01/1900` +
+**Pros:** It is easy to create a person object without specifying the birthday value. +
+**Cons:** The birthday will not be shown in the person details panel if the person's birthday is exactly the default birthday. +
+**Alternative 2:** Initialize a person's birthday only when a birthday is added to the person, and set the birthday object as `null` when deleting the birthday +
+**Pros:** There is no default birthday for each person, thus any date can be shown in person details panel. +
+**Cons:** It is not convenient every time we want to create a new person object.
 // end::birthdaymech[]
 
 // tag::undoredo[]
