--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -119,7 +119,6 @@ Adds a person to Death Note +
 TIPS: +
 
 1. A person can have any number of TAGS.
-2. You can input all the other parameters in any order except *NAME* which comes first
 //end::bday[]
 
 [big green]#Examples#:
@@ -176,9 +175,9 @@ Edits the picture of the 1st person to the picture specified in the path i.e. cl
 
 Finds persons who matches the given attributes. +
 
-  Format: `find [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/BIRTHDAY] [r/REMARK] [w/WEBSITE] [t/TAG]... `
+  Format: `find [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/BIRTHDAY] [w/WEBSITE] [t/TAG]... `
 
-  Shorthand: `f [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/BIRTHDAY] [r/REMARK] [w/WEBSITE] [t/TAG]...`
+  Shorthand: `f [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [b/BIRTHDAY] [w/WEBSITE] [t/TAG]...`
 
 * Searches based on the input and prefix.
 * The search is case insensitive for NAME. e.g `hans` will match `Hans`
